--- a/k8s-in-vagrant/conf/dashboard-1-20-5.yaml
+++ b/k8s-in-vagrant/conf/dashboard-1-20-5.yaml
@@ -1,21 +1,10 @@
-# Copyright 2017 The Kubernetes Authors.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 apiVersion: v1
 kind: Namespace
 metadata:
   name: kubernetes-dashboard
+  labels:
+    k8s-app: kubernetes-dashboard
+    addonmanager.kubernetes.io/mode: Reconcile
 
 ---
 
@@ -24,6 +13,7 @@ kind: ServiceAccount
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
+    addonmanager.kubernetes.io/mode: Reconcile
   name: kubernetes-dashboard
   namespace: kubernetes-dashboard
 
@@ -34,6 +24,8 @@ apiVersion: v1
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
+    kubernetes.io/cluster-service: "true"
+    addonmanager.kubernetes.io/mode: Reconcile
   name: kubernetes-dashboard
   namespace: kubernetes-dashboard
 spec:
@@ -43,6 +35,7 @@ spec:
   selector:
     k8s-app: kubernetes-dashboard
 
+
 ---
 
 apiVersion: v1
@@ -50,6 +43,7 @@ kind: Secret
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
+    addonmanager.kubernetes.io/mode: EnsureExists
   name: kubernetes-dashboard-certs
   namespace: kubernetes-dashboard
 type: Opaque
@@ -61,6 +55,7 @@ kind: Secret
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
+    addonmanager.kubernetes.io/mode: EnsureExists
   name: kubernetes-dashboard-csrf
   namespace: kubernetes-dashboard
 type: Opaque
@@ -74,6 +69,7 @@ kind: Secret
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
+    addonmanager.kubernetes.io/mode: EnsureExists
   name: kubernetes-dashboard-key-holder
   namespace: kubernetes-dashboard
 type: Opaque
@@ -85,6 +81,7 @@ apiVersion: v1
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
+    addonmanager.kubernetes.io/mode: EnsureExists
   name: kubernetes-dashboard-settings
   namespace: kubernetes-dashboard
 
@@ -95,20 +92,18 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
+    addonmanager.kubernetes.io/mode: Reconcile
   name: kubernetes-dashboard
   namespace: kubernetes-dashboard
 rules:
-  # Allow Dashboard to get, update and delete Dashboard exclusive secrets.
   - apiGroups: [""]
     resources: ["secrets"]
     resourceNames: ["kubernetes-dashboard-key-holder", "kubernetes-dashboard-certs", "kubernetes-dashboard-csrf"]
     verbs: ["get", "update", "delete"]
-    # Allow Dashboard to get and update 'kubernetes-dashboard-settings' config map.
   - apiGroups: [""]
     resources: ["configmaps"]
     resourceNames: ["kubernetes-dashboard-settings"]
     verbs: ["get", "update"]
-    # Allow Dashboard to get metrics.
   - apiGroups: [""]
     resources: ["services"]
     resourceNames: ["heapster", "dashboard-metrics-scraper"]
@@ -125,9 +120,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
+    addonmanager.kubernetes.io/mode: Reconcile
   name: kubernetes-dashboard
 rules:
-  # Allow Metrics Scraper to get metrics from the Metrics server
   - apiGroups: ["metrics.k8s.io"]
     resources: ["pods", "nodes"]
     verbs: ["get", "list", "watch"]
@@ -139,6 +134,7 @@ kind: RoleBinding
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
+    addonmanager.kubernetes.io/mode: Reconcile
   name: kubernetes-dashboard
   namespace: kubernetes-dashboard
 roleRef:
@@ -156,6 +152,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: kubernetes-dashboard
+  labels:
+    k8s-app: kubernetes-dashboard
+    addonmanager.kubernetes.io/mode: Reconcile
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -187,7 +186,7 @@ spec:
     spec:
       containers:
         - name: kubernetes-dashboard
-          image: kubernetesui/dashboard:v2.2.0
+          image: kubernetesui/dashboard:v2.0.1
           imagePullPolicy: Always
           ports:
             - containerPort: 8443
@@ -195,14 +194,9 @@ spec:
           args:
             - --auto-generate-certificates
             - --namespace=kubernetes-dashboard
-            # Uncomment the following line to manually specify Kubernetes API server Host
-            # If not specified, Dashboard will attempt to auto discover the API server and connect
-            # to it. Uncomment only if the default does not work.
-            # - --apiserver-host=http://my-address:port
           volumeMounts:
             - name: kubernetes-dashboard-certs
               mountPath: /certs
-              # Create on-disk volume to store exec logs
             - mountPath: /tmp
               name: tmp-volume
           livenessProbe:
@@ -226,8 +220,9 @@ spec:
       serviceAccountName: kubernetes-dashboard
       nodeSelector:
         "kubernetes.io/os": linux
-      # Comment the following tolerations if Dashboard must not be deployed on master
       tolerations:
+        - key: "CriticalAddonsOnly"
+          operator: "Exists"
         - key: node-role.kubernetes.io/master
           effect: NoSchedule
 
@@ -266,12 +261,13 @@ spec:
     metadata:
       labels:
         k8s-app: dashboard-metrics-scraper
-      annotations:
-        seccomp.security.alpha.kubernetes.io/pod: 'runtime/default'
     spec:
+      securityContext:
+        seccompProfile:
+          type: RuntimeDefault
       containers:
         - name: dashboard-metrics-scraper
-          image: kubernetesui/metrics-scraper:v1.0.6
+          image: kubernetesui/metrics-scraper:v1.0.4
           ports:
             - containerPort: 8000
               protocol: TCP
@@ -293,7 +289,6 @@ spec:
       serviceAccountName: kubernetes-dashboard
       nodeSelector:
         "kubernetes.io/os": linux
-      # Comment the following tolerations if Dashboard must not be deployed on master
       tolerations:
         - key: node-role.kubernetes.io/master
           effect: NoSchedule
