--- a/k8s-in-vagrant/Vagrantfile
+++ b/k8s-in-vagrant/Vagrantfile
@@ -32,7 +32,7 @@ Vagrant.configure("2") do |config|
         vb.cpus = 2
         vb.name = "k8s-node#{i}"
       end
-      # node.vm.provision "shell", path: "install.sh", args: [i, ip, $etcd_cluster]
+      # node.vm.provision "shell", path: "install.sh", args: [i]
     end
   end
 end
