--- a/k8s-in-vagrant/Vagrantfile
+++ b/k8s-in-vagrant/Vagrantfile
@@ -24,11 +24,11 @@ Vagrant.configure("2") do |config|
       ip1 = "172.17.9.#{i+100}"
       ip2 = "172.16.0.#{i+100}"
       ip3 = "172.15.0.#{i+100}"
-      node.vm.network "private_network", ip: ip1
-      node.vm.network "private_network", ip: ip2
-      node.vm.network "private_network", ip: ip3
+      node.vm.network "private_network", ip: ip1, netmask: "16"
+      node.vm.network "private_network", ip: ip2, netmask: "16"
+      node.vm.network "private_network", ip: ip3, netmask: "16"
       node.vm.provider "virtualbox" do |vb|
-        vb.memory = "4096"
+        vb.memory = "8192"
         vb.cpus = 2
         vb.name = "k8s-node#{i}"
       end
