--- a/k8s-in-vagrant/Vagrantfile
+++ b/k8s-in-vagrant/Vagrantfile
@@ -16,23 +16,24 @@ Vagrant.configure("2") do |config|
   config.disksize.size = "30GB"
 
   $num_instances = 3
-  $etcd_cluster = "node1=http://172.17.9.101:2380"
+  $etcd_cluster = "node1=http://172.18.0.101:2380"
   (1..$num_instances).each do |i|
     config.vm.define "k8s-node#{i}" do |node|
       node.vm.box = "ubuntu/bionic"
       node.vm.hostname = "k8s-node#{i}"
-      ip1 = "172.17.9.#{i+100}"
+      netmask = "255.255.0.0"
+      ip1 = "172.18.0.#{i+100}"
       ip2 = "172.16.0.#{i+100}"
       ip3 = "172.15.0.#{i+100}"
-      node.vm.network "private_network", ip: ip1, netmask: "16"
-      node.vm.network "private_network", ip: ip2, netmask: "16"
-      node.vm.network "private_network", ip: ip3, netmask: "16"
+      node.vm.network "private_network", ip: ip1, netmask: netmask
+      node.vm.network "private_network", ip: ip2, netmask: netmask
+      node.vm.network "private_network", ip: ip3, netmask: netmask
       node.vm.provider "virtualbox" do |vb|
-        vb.memory = "8192"
+        vb.memory = "4096"
         vb.cpus = 2
         vb.name = "k8s-node#{i}"
       end
-      # node.vm.provision "shell", path: "install.sh", args: [i]
+      node.vm.provision "shell", path: "install.sh", args: [i]
     end
   end
 end
