--- a/ingress-canary/ing.yaml
+++ b/ingress-canary/ing.yaml
@@ -6,14 +6,14 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: qae.bwangel.me
+  - host: fruit.bwangel.me
     http:
       paths:
       - backend:
           service:
             name: apple-service
             port:
-              number: 5678
+              number: 8000
         path: /
         pathType: ImplementationSpecific
 ---
@@ -29,13 +29,13 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: qae.bwangel.me
+    - host: fruit.bwangel.me
       http:
         paths:
           - backend:
               service:
                 name: apple-service
                 port:
-                  number: 5678
+                  number: 8000
             path: /
             pathType: ImplementationSpecific
