--- a/kubia/Dockerfile
+++ b/kubia/Dockerfile
@@ -1,16 +1,15 @@
-# docker build -t bwangel/qae_kubia_$(date +%Y_%m_%d_%H%M) --build-arg app=kubia .
+# docker build -t bwangel/echo:latest .
 
 ARG build_base=golang:1.18
-ARG base=golang:1.18
+ARG base=alpine
 
 FROM ${build_base} as builder
 
 RUN mkdir /code
 WORKDIR /code
 COPY . /code
-RUN go build -o kubia .
+RUN CGO_ENABLED=0 go build -a -ldflags '-extldflags "-static"' -o http_echo .
 
 FROM ${base}
 
-COPY --from=builder /code/kubia /go/bin
-ENTRYPOINT /go/bin/kubia
+COPY --from=builder /code/http_echo /bin
