--- a/ingress-not-alive/ing-canary.yaml
+++ b/ingress-not-alive/ing-canary.yaml
@@ -14,7 +14,7 @@ spec:
         paths:
           - backend:
               service:
-                name: banana-service
+                name: slow-banana-service
                 port:
                   number: 8000
             path: /
